--- a/index.html
+++ b/index.html
@@ -3,51 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Copa Unaí</title>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/media-query.css">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
-<body onresize="mudouTamanho()">
-    <header>
-        <div id="content">
-            <div class="cabecalho">
-                <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-                <menu id="itens">
-                    <ul>
-                        <li><a href="#principal">Principal</a></li>
-                        <li><a href="#sobre">Sobre</a></li>
-                        <li><a href="#evento">Eventos</a></li>
-                        <li><a href="#contato">Contato</a></li>
-                        <li><a href="#inscricao">Inscrição</a></li>
-                    </ul>
-                </menu>
-            </div>
-        </div>
-    </header>
+<body>
     
-    <section class="content" id="principal">
-        <div>
 
-        </div>
-    </section>
 
-    <section id="sobre">
-
-    </section>
-
-    <section id="evento">
+    <script src="scripts.js">
         
-    </section>
-
-    <section id="contato">
-
-    </section>
-
-    <section id="inscricao">
-
-    </section>
-
-    <script src="scripts.js"></script>
+    </script>
 </body>
 </html>
