--- a/index.html
+++ b/index.html
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style.css">
-    <title>Copa Unaí</title>
+    <title>Meu Site One Page</title>
+    <link rel="stylesheet" href="estilos/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div id="logo">Logo Aqui</div>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+            <div class="hamburger-menu">&#9776;</div>
+        </div>
+    </header>
 
+    <main>
+        <section id="home">
+            <div class="container">
+                <h1>Seção Home</h1>
+                <p>Conteúdo da primeira seção.</p>
+            </div>
+        </section>
 
-    <script src="scripts.js">
-        
-    </script>
+        <section id="sobre">
+            <div class="container">
+                <h1>Sobre</h1>
+                <p>Conteúdo da segunda seção.</p>
+            </div>
+        </section>
+
+        <section id="servicos">
+            <div class="container">
+                <h1>Serviços</h1>
+                <p>Conteúdo da terceira seção.</p>
+            </div>
+        </section>
+
+        <section id="contato">
+            <div class="container">
+                <h1>Contato</h1>
+                <p>Conteúdo da quarta seção.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>Rodapé - © 2024 Meu Site</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
