Otimizações no menu

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#eventos-anteriores" onclick="menuToggle()">Eventos Anteriores</a></li>
                     <li><a href="#sobre" onclick="menuToggle()">Sobre</a></li>
                     <li><a href="#contato" onclick="menuToggle()">Contato</a></li>
-                    <li><a href="#inscricao" class="botao-inscricao" onclick="menuToggle()">Inscrição</a></li>
+                    <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao" onclick="menuToggle()">Inscrição</a></li>
                 </ul>
             </nav>
         </div>
