Fazendo a função ficar genérica

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                     <img src="images/Copa-Unai-Logo.png" alt="Logo Copa Unaí" class="logo-img">
                     Copa Unaí
                 </a>
-                <span class="material-symbols-outlined" onclick="menuToggle()">menu</span>
+                <span class="material-symbols-outlined" onclick="Toggle('.menu-links', 'abriu')">menu</span>
             </div>
             <nav class="menu-links">
                 <ul class="lista">
-                    <li><a href="#principal" onclick="menuToggle()">Principal</a></li>
-                    <li><a href="#eventos-anteriores" onclick="menuToggle()">Eventos Anteriores</a></li>
-                    <li><a href="#sobre" onclick="menuToggle()">Sobre</a></li>
-                    <li><a href="#contato" onclick="menuToggle()">Contato</a></li>
-                    <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao" onclick="menuToggle()">Inscrição</a></li>
+                    <li><a href="#principal" onclick="Toggle('.menu-links', 'abriu')">Principal</a></li>
+                    <li><a href="#eventos-anteriores" onclick="Toggle('.menu-links', 'abriu')">Eventos Anteriores</a></li>
+                    <li><a href="#sobre" onclick="Toggle('.menu-links', 'abriu')">Sobre</a></li>
+                    <li><a href="#contato" onclick="Toggle('.menu-links', 'abriu')">Contato</a></li>
+                    <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao" onclick="Toggle('.menu-links', 'abriu')">Inscrição</a></li>
                 </ul>
             </nav>
         </div>
