--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
         </section>
     </main>
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
