--- a/index.html
+++ b/index.html
@@ -35,24 +35,30 @@
 
     <main>
         <section id="principal" class="hidden">
-            <div id="cowntdown-container">
-                <div class="countdown-el days-c">
-                    <p class="text" id="days">0</p>
-                    <span>Dias</span>
+            <div class="conteudo-principal">
+
+                <h1 class="titulo-parte-principal" style="font-size: 2.5rem; margin-top: 15px;">Copa Unaí</h1>
+                <p class="texto-parte-principal" style="margin-bottom: 5px;">Os melhores campeonátos são aqui.</p>
+                <h2 class="titulo-parte-principal">Faltam:</h2>
+                <div id="cowntdown-container">
+                    <div class="countdown-el days-c">
+                        <p class="text" id="days">0</p>
+                        <span>Dias</span>
+                    </div>
+                    <div class="countdown-el hours-c">
+                        <p class="text" id="hours">0</p>
+                        <span>Horas</span>
+                    </div>
+                    <div class="countdown-el mins-c">
+                        <p class="text" id="mins">0</p>
+                        <span>Minutos</span>
+                    </div>
+                    <div class="countdown-el seconds-c">
+                        <p class="text" id="seconds">0</p>
+                        <span>Segundos</span>
+                    </div>
                 </div>
-                <div class="countdown-el hours-c">
-                    <p class="text" id="hours">0</p>
-                    <span>Horas</span>
-                </div>
-                <div class="countdown-el mins-c">
-                    <p class="text" id="mins">0</p>
-                    <span>Minutos</span>
-                </div>
-                <div class="countdown-el seconds-c">
-                    <p class="text" id="seconds">0</p>
-                    <span>Segundos</span>
-                </div>
-            </div>         
+            </div>        
         </section>
         <section id="historia" class="hidden">
             <p>Conteúdo da seção eventos anteriores</p>
