--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="conteudo-principal">
 
                 <h1 class="titulo-parte-principal" style="font-size: 2.5rem; margin-top: 15px;">Copa Unaí</h1>
-                <p class="texto-parte-principal" style="margin-bottom: 5px;">Os melhores campeonátos são aqui.</p>
+                <p class="texto-parte-principal" style="margin-bottom: 5px;">Os melhores campeonátos são aqui</p>
                 <h2 class="titulo-parte-principal">Faltam:</h2>
                 <div id="cowntdown-container">
                     <div class="countdown-el days-c">
