--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="menu-links">
                 <ul class="lista">
                     <li><a href="#principal" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Principal</a></li>
-                    <li><a href="#historia" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Nossa História</a></li>
+                    <li><a href="#eventos-anteriores" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Eventos Anteriores</a></li>
                     <li><a href="#sobre" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Sobre</a></li>
                     <li><a href="#contato" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Contato</a></li>
                     <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao botao-menu" onclick="Toggle('.menu-links', 'abriu')">Inscrição</a></li>
@@ -39,7 +39,7 @@
 
                 <h1 class="titulo-parte-principal" style="font-size: 2.5rem; margin-top: 15px;">Copa Unaí</h1>
                 <p class="texto-parte-principal" style="margin-bottom: 5px;">Os melhores campeonátos são aqui</p>
-                <h2 class="titulo-parte-principal">Faltam:</h2>
+                <h2 class="titulo-parte-principal ">Começa em:</h2>
                 <div id="cowntdown-container">
                     <div class="countdown-el days-c">
                         <p class="text" id="days">0</p>
@@ -60,8 +60,8 @@
                 </div>
             </div>        
         </section>
-        <section id="historia" class="hidden">
-            <p>Conteúdo da seção eventos anteriores</p>
+        <section id="eventos-anteriores" class="hidden">
+            
         </section>
         <section id="sobre" class="hidden">
             <p>Conteúdo da seção sobre</p>
