Animação de entrada

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-        <section id="principal" class="hidden">
+        <section id="principal" class="hidden tlg">
             <div class="conteudo-principal">
 
                 <h1 class="titulo-parte-principal" style="font-size: 2.5rem; margin-top: 15px;">Copa Unaí</h1>
@@ -61,7 +61,7 @@
             </div>        
         </section>
         <section id="eventos-anteriores" class="hidden">
-            
+
         </section>
         <section id="sobre" class="hidden">
             <p>Conteúdo da seção sobre</p>
