--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-        <section id="principal" class="hidden tlg">
+        <section id="principal" class="hidden">
             <div class="conteudo-principal">
 
                 <h1 class="titulo-parte-principal" style="font-size: 2.5rem; margin-top: 15px;">Copa Unaí</h1>
