--- a/index.html
+++ b/index.html
@@ -61,9 +61,26 @@
             </div>        
         </section>
         <section id="eventos-anteriores" class="hidden">
-
+            <div class="anim-eventos-anteriores">
+                <div class="animacao-lateral-1">
+                    <img src="/images/eventos-anteriores/Futsal um.jpg" alt="Banner futsal da copa unaí">
+                    <p>Textinho aqui</p>
+                </div>
+                <div class="animacao-lateral-2">
+                    <p>Textinho aqui</p>
+                    <img src="/images/eventos-anteriores/Futsal dois.png" alt="Banner futsal da copa unaí">
+                </div>
+                <div class="animacao-lateral-1">
+                    <img src="/images/eventos-anteriores/Volei um.jpg" alt="Banner volei da copa unaí">
+                    <p>Textinho aqui</p>
+                </div>
+                <div class="animacao-lateral-2">
+                    <p>Textinho aqui</p>
+                    <img src="/images/eventos-anteriores/volei dois.png" alt="Banner volei da copa unaí">
+                </div>
+            </div>
         </section>
-        <section id="sobre" class="hidden">
+        <section id="sobre" class="hidden"  style="height: 100vh;">
             <p>Conteúdo da seção sobre</p>
         </section>
         <section id="contato" class="hidden">
