--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
         <section id="eventos-anteriores" class="hidden">
             <div class="anim-eventos-anteriores">
                 <div class="animacao-lateral-1">
-                    <img src="/images/eventos-anteriores/Futsal-um.jpg" alt="Banner futsal da copa unaí">
+                    <div class="imagem-eventos" style="background-image: url(images/eventos-anteriores/Futsal-um.jpg);"></div>
                     <p>Textinho aqui</p>
                 </div>
                 <div class="animacao-lateral-2">
                     <p>Textinho aqui</p>
-                    <img src="/images/eventos-anteriores/Futsal-dois.png" alt="Banner futsal da copa unaí">
+                    <div class="imagem-eventos" style="background-image: url(images/eventos-anteriores/Futsal-dois.png);"></div>
                 </div>
                 <div class="animacao-lateral-1">
-                    <img src="/images/eventos-anteriores/Volei-um.jpg" alt="Banner volei da copa unaí">
+                    <div class="imagem-eventos" style="background-image: url(images/eventos-anteriores/Volei-um.jpg);"></div>
                     <p>Textinho aqui</p>
                 </div>
                 <div class="animacao-lateral-2">
                     <p>Textinho aqui</p>
-                    <img src="/images/eventos-anteriores/volei-dois.png" alt="Banner volei da copa unaí">
+                    <div class="imagem-eventos" style="background-image: url(images/eventos-anteriores/volei-dois.png);"></div>
                 </div>
             </div>
         </section>
