--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <section id="eventos-anteriores" class="hidden">
             <div class="anim-eventos-anteriores">
                 <div class="animacao-lateral-1">
-                    <div class="imagem-eventos" style="background-image: url(images/eventos-anteriores/Futsal-um.jpg);"></div>
-                    <p>Textinho aqui</p>
+                    <img src="Futsal-um.jpg" alt="">
+                    <p>A 1ª Edição da Copa Unaí de Futsal ocorreu nos dias 14 e 15 de janeiro de 2023, marcando o início de um emocionante torneio para os amantes do futsal e também o começo desse grande evento esportivo chamado Copa Unaí.</p>
                 </div>
                 <div class="animacao-lateral-2">
                     <p>Textinho aqui</p>
-                    <div class="imagem-eventos" style="background-image: url(images/eventos-anteriores/Futsal-dois.png);"></div>
+                    <div class="imagem-eventos imagem2-secaoeventos" style="background-image: url(images/eventos-anteriores/Futsal-dois.png);"></div>
                 </div>
                 <div class="animacao-lateral-1">
                     <div class="imagem-eventos" style="background-image: url(images/eventos-anteriores/Volei-um.jpg);"></div>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="animacao-lateral-2">
                     <p>Textinho aqui</p>
-                    <div class="imagem-eventos" style="background-image: url(images/eventos-anteriores/volei-dois.png);"></div>
+                    <div class="imagem-eventos imagem2-secaoeventos" style="background-image: url(images/eventos-anteriores/volei-dois.png);"></div>
                 </div>
             </div>
         </section>
