--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section id="eventos-anteriores" class="hidden">
             <div class="anim-eventos-anteriores">
                 <div class="animacao-lateral-1">
-                    <img src="Futsal-um.jpg" alt="">
+                    <img src="eventos-anteriores/Futsal-um.jpg" alt="">
                     <p>A 1ª Edição da Copa Unaí de Futsal ocorreu nos dias 14 e 15 de janeiro de 2023, marcando o início de um emocionante torneio para os amantes do futsal e também o começo desse grande evento esportivo chamado Copa Unaí.</p>
                 </div>
                 <div class="animacao-lateral-2">
