--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
                 </div>
                 <div class="animacao-lateral-2">
                     <p>Textinho aqui</p>
-                    <div class="imagem-eventos imagem2-secaoeventos" style="background-image: url(images/eventos-anteriores/Futsal-dois.png);"></div>
+                    <img src="images/eventos-anteriores/Futsal-dois.png" alt="">
                 </div>
                 <div class="animacao-lateral-1">
-                    <div class="imagem-eventos" style="background-image: url(images/eventos-anteriores/Volei-um.jpg);"></div>
+                    <img src="images/eventos-anteriores/Volei-um.jpg" alt="">
                     <p>Textinho aqui</p>
                 </div>
                 <div class="animacao-lateral-2">
                     <p>Textinho aqui</p>
-                    <div class="imagem-eventos imagem2-secaoeventos" style="background-image: url(images/eventos-anteriores/volei-dois.png);"></div>
+                    <img src="images/eventos-anteriores/volei-dois.png" alt="">
                 </div>
             </div>
         </section>
