Seção Sobre "pronta"

--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
                 </div>
             </div>        
         </section>
-        <section id="sobre" class="hidden"  style="height: 100vh;">
-            <p>Conteúdo da seção sobre</p>
+        <section id="sobre" class="hidden">
+            <div>
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius harum, quaerat, dolore laborum, nisi beatae omnis a sequi dolorum neque deserunt atque reiciendis dolores possimus necessitatibus vitae! Unde, at ut.</p>
         </section>
         <section id="eventos-anteriores" class="hidden">
             <div class="swiper">
@@ -80,9 +84,6 @@
         </section>
         <section id="contato" class="hidden">
             <p>Conteúdo da seção contato</p>
-        </section>
-        <section id="inscricao" class="hidden">
-            <p>Conteúdo da seção inscrição</p>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
