--- a/teste.html
+++ b/teste.html
@@ -1,79 +1,74 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quadra de Futsal</title>
+    <title>Document</title>
     <style>
-        body {
-    background-color: #222;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-.quadra {
-    width: 80vw;
-    height: 100vh;
-    background-color: #444;
-    border: 10px solid #fff;
-    position: relative;
-}
-
-.linha {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
-}
-
-.linha-vertical {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 2px;
-    height: 100%;
-    background-color: #fff;
-}
-
-.meio-campo {
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    width: 50%;
-    height: 50%;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
-}
-
-.areas {
-    position: absolute;
-    top: 35%;
-    left: 20%;
-    width: 30%;
-    height: 30%;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
-.areas.direita {
-    left: 70%;
-}
-
+        *{
+            padding: 0px;
+            margin: 0px;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
+        section{
+            background-color: black;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .redondo{
+            width: 40vw;
+            height: 40vw;
+            border-radius: 50%;
+            border: 2px solid white;
+        }
+        .linha{
+            width: 100%;
+            height: 2px;
+            background-color: white;
+        }
+        .meio{
+            position: relative;
+            background-color: red;
+            margin: auto;
+        }
+        .cima{
+            position: relative;
+            transform: translateY(-50%);
+        }
+        .baixo{
+            position: relative;
+            transform: translateY(50%);
+        }
+        .linha-cima{
+            margin-top: 40%;
+        }
+        .linha-baixo{
+            margin-bottom: 40%;
+        }
     </style>
 </head>
 <body>
-    <div class="quadra">
-        <div class="linha"></div>
-        <div class="linha linha-vertical"></div>
-        <div class="meio-campo"></div>
-        <div class="areas"></div>
-        <div class="areas direita"></div>
-    </div>
+    <section>
+        <div class="redondo cima">
+
+        </div>
+        <span class="linha linha-cima">
+
+        </span>
+        <div class="redondo meio">
+            <span class="linha">
+                
+            </span>
+        </div>
+        <span class="linha linha-baixo"></span>
+        <div class="redondo baixo">
+
+        </div>
+    </section>
 </body>
 </html>
