Cor de fundo na parte seções diferente

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="lista">
                     <li><a href="#principal" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Principal</a></li>
                     <li><a href="#sobre" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Sobre</a></li>
-                    <li><a href="#eventos-anteriores" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Eventos Anteriores</a></li>
+                    <li><a href="#eventos-anteriores" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Ultimas Edições</a></li>
                     <li><a href="#contato" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Contato</a></li>
                     <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao botao-menu" onclick="Toggle('.menu-links', 'abriu')">Inscrição</a></li>
                 </ul>
@@ -62,8 +62,8 @@
         </section>
         <section id="sobre" class="hidden">
             <div>
-                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
                 <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius harum, quaerat, dolore laborum, nisi beatae omnis a sequi dolorum neque deserunt atque reiciendis dolores possimus necessitatibus vitae! Unde, at ut.</p>
         </section>
