Pedindo ajuda pro Wez

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </section>
         <section id="sobre" class="hidden">
             <div>
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                <h2>ME AJUDA WEZEY, ESTOU SEM IDEIAS PRA FAZER ESSA SEÇÃO</h2>
+                <h3>ESTOU SEM IDEIAS PRA SEÇÃO DE BAIXO TAMBEM</h3>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius harum, quaerat, dolore laborum, nisi beatae omnis a sequi dolorum neque deserunt atque reiciendis dolores possimus necessitatibus vitae! Unde, at ut.</p>
         </section>
