Pedindo ajuda pro Wez

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h2>ME AJUDA WEZEY, ESTOU SEM IDEIAS PRA FAZER ESSA SEÇÃO</h2>
                 <h3>ESTOU SEM IDEIAS PRA SEÇÃO DE BAIXO TAMBEM</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius harum, quaerat, dolore laborum, nisi beatae omnis a sequi dolorum neque deserunt atque reiciendis dolores possimus necessitatibus vitae! Unde, at ut.</p>
+            <p>Bola um textinho pra colocar aqui apresentando a copa unaí falando um pouquinho sobre vocês. E bola também um titulo pra colocar no primeiro titulo e um no segundo também.</p>
         </section>
         <section id="eventos-anteriores" class="hidden">
             <div class="swiper">
