--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                     <li><a href="#principal" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Principal</a></li>
                     <li><a href="#sobre" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Sobre</a></li>
                     <li><a href="#eventos-anteriores" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Ultimas Edições</a></li>
-                    <li><a href="#contato" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Contato</a></li>
                     <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao botao-menu" onclick="Toggle('.menu-links', 'abriu')">Inscrição</a></li>
                 </ul>
             </nav>
@@ -82,10 +81,18 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
-        <section id="contato" class="hidden">
-            <p>Conteúdo da seção contato</p>
-        </section>
     </main>
+    <footer>
+        <div>
+            <a href="#" target="_blank" rel="noopener noreferrer">
+                <img src="images/icone-whatsapp.png" alt="Icone do whatsapp">
+            </a>
+            <a href="https://www.instagram.com/copaunai?igsh=MW5yczF6emQ1NzhjYw==" target="_blank" rel="noopener noreferrer">
+                <img src="images/icone-instagram.png" alt="Icone do instagram">
+            </a>
+        </div>
+        <p>Todos os direitos reservados © Copa Unaí 2024.</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
