--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <title>Copa Unaí</title>
 </head>
 <body>
@@ -27,7 +26,9 @@
                     <li><a href="#principal" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Principal</a></li>
                     <li><a href="#sobre" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Sobre</a></li>
                     <li><a href="#eventos-anteriores" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Ultimas Edições</a></li>
-                    <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao botao-menu" onclick="Toggle('.menu-links', 'abriu')">Inscrição</a></li>
+                    <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao botao-menu" onclick="Toggle('.menu-links', 'abriu')" target="_blank">Inscrição<span class="material-symbols-outlined" style="font-size: 1.2rem; margin: auto 0px auto 10px; ">
+                        north_east
+                        </span></a></li>
                 </ul>
             </nav>
         </div>
