--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <nav class="menu-links">
                 <ul class="lista">
-                    <li><a href="#principal" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Principal</a></li>
+                    <li><a href="#" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Principal</a></li>
                     <li><a href="#sobre" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Sobre</a></li>
                     <li><a href="#eventos-anteriores" onclick="Toggle('.menu-links', 'abriu')" class="botao-menu">Ultimas Edições</a></li>
                     <li style="margin: 20px 0px 15px 13px;"><a href="#inscricao" class="botao-inscricao botao-menu" onclick="Toggle('.menu-links', 'abriu')" target="_blank">Inscrição<span class="material-symbols-outlined" style="font-size: 1.2rem; margin: auto 0px auto 10px; ">
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-        <section id="principal" class="hidden">
+        <section id="principal" class="hidde">
             <div class="conteudo-principal">
                 <h1 class="titulo-parte-principal" style="font-size: 2.5rem; margin-top: 15px;">Copa Unaí</h1>
                 <p class="texto-parte-principal" style="margin-bottom: 5px;">Os melhores campeonatos são aqui</p>
