Atualização na animação da seção sobre

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                 </div>
             </div>        
         </section>
-        <section id="sobre" class="hidden">
-            <div>
+        <section id="sobre">
+            <div class="hidden">
                 <h2>ME AJUDA WEZEY, ESTOU SEM IDEIAS PRA FAZER ESSA SEÇÃO</h2>
                 <h3>ESTOU SEM IDEIAS PRA SEÇÃO DE BAIXO TAMBEM</h3>
             </div>
-            <p>Bola um textinho pra colocar aqui apresentando a copa unaí falando um pouquinho sobre vocês. E bola também um titulo pra colocar no primeiro titulo e um no segundo também.</p>
+            <p class="hidden">Bola um textinho pra colocar aqui apresentando a copa unaí falando um pouquinho sobre vocês. E bola também um titulo pra colocar no primeiro titulo e um no segundo também.</p>
         </section>
         <section id="eventos-anteriores" class="hidden">
             <div class="swiper">
