--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <div class="conteudo-principal">
                 <h1 class="titulo-parte-principal" style="font-size: 2.5rem; margin-top: 15px;">Copa Unaí</h1>
                 <p class="texto-parte-principal" style="margin-bottom: 5px;">Os melhores campeonatos são aqui</p>
+                <p>3ª edição do futsal 2024</p>
+                <p>Ginásio Poliesportivo.</p>
+                <p>-------, ------, ---- Unaí - MG.</p>
                 <h2 class="titulo-parte-principal ">Começa em:</h2>
                 <div id="cowntdown-container">
                     <div class="countdown-el days-c">
@@ -67,6 +70,7 @@
             </div>
             <p class="hidden">Bola um textinho pra colocar aqui apresentando a copa unaí falando um pouquinho sobre vocês. E bola também um titulo pra colocar no primeiro titulo e um no segundo também.</p>
         </section>
+        </div>
         <section id="eventos-anteriores" class="hidden">
             <div class="swiper">
                 <div class="swiper-wrapper">
